--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cdeio Designer</title>
+    <title>Electron Samples</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="./assets/styles/main.css" />
   </head>
   <body >
     <div id="container" ></div>
-    <script src="bundle.js"></script>
+    <script>
+      require('./src/app.js');
+    </script>
   </body>
 </html>
